--- a/public/work.html
+++ b/public/work.html
@@ -8,14 +8,14 @@
         <title>Tom Horsey</title>
         <script src="script.js" defer></script>
         <link rel="icon" type="image/x-icon" href="">
-        <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&family=Tiny5&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
             <div class="container">
                 <nav>
-                    <a href="index.html"> Tom Horsey</a>
+                    <a href="index.html" class="logo"> Tom Horsey</a>
                     <ul>
                         <li><a href="work.html">Work</a></li>
                         <li><a href="projects.html">Projects</a></li>
@@ -26,11 +26,16 @@
         </header>
         <main>
             <div class="container">
-                <section class="greeting-card">
-                    <div class="canvas-wrapper">
-                        <p id="target-text">Hello! I'm Tom. Welcome to my website.</p>
-                        <canvas id="overlayCanvas"></canvas>
-                    </div>
+                <h1>Work</h1>
+                <section>
+                    <article class="work-card">
+                        <h2>Software Development Engineer I (L4), Amazon</h2>
+                        <p>Jan 2025 - Present</p>
+                    </article>
+                    <article class="work-card">
+                        <h2>Bachelor of Computer Science (BCompSc), University of Queensland</h2>
+                        <p>Jul 2022 - Dec 2024</p>
+                    </article>
                 </section>
             </div>
         </main>
