--- a/public/projects.html
+++ b/public/projects.html
@@ -29,50 +29,15 @@
                 <h1>Projects</h1>
                 <section class="project-grid">
                     <article class="project-card">
-                        <a href="https://maxbo.me/html-in-hyde/1/projects/puzzling/index.html">
-                            <img src="images/puzzling.png" alt="Puzzling">
-                            <h2>Puzzling</h2>
-                            <p>A jigsaw puzzle I built at HTML in Hyde #1.</p>
+                        <a href="https://github.com/thomashorsey/website">
+                            <img src="images/website.png" alt="website">
+                            <h2>Website</h2>
+                            <p>A personal index of my work and interests.</p>
                         </a>
                     </article>
                     <article class="project-card">
                         <a href="https://maxbo.me/html-in-hyde/1/projects/puzzling/index.html">
-                            <img src="images/puzzling.png" alt="Puzzling">
-                            <h2>Puzzling</h2>
-                            <p>A jigsaw puzzle I built at HTML in Hyde #1.</p>
-                        </a>
-                    </article>
-                    <article class="project-card">
-                        <a href="https://maxbo.me/html-in-hyde/1/projects/puzzling/index.html">
-                            <img src="images/puzzling.png" alt="Puzzling">
-                            <h2>Puzzling</h2>
-                            <p>A jigsaw puzzle I built at HTML in Hyde #1.</p>
-                        </a>
-                    </article>
-                    <article class="project-card">
-                        <a href="https://maxbo.me/html-in-hyde/1/projects/puzzling/index.html">
-                            <img src="images/puzzling.png" alt="Puzzling">
-                            <h2>Puzzling</h2>
-                            <p>A jigsaw puzzle I built at HTML in Hyde #1.</p>
-                        </a>
-                    </article>
-                    <article class="project-card">
-                        <a href="https://maxbo.me/html-in-hyde/1/projects/puzzling/index.html">
-                            <img src="images/puzzling.png" alt="Puzzling">
-                            <h2>Puzzling</h2>
-                            <p>A jigsaw puzzle I built at HTML in Hyde #1.</p>
-                        </a>
-                    </article>
-                    <article class="project-card">
-                        <a href="https://maxbo.me/html-in-hyde/1/projects/puzzling/index.html">
-                            <img src="images/puzzling.png" alt="Puzzling">
-                            <h2>Puzzling</h2>
-                            <p>A jigsaw puzzle I built at HTML in Hyde #1.</p>
-                        </a>
-                    </article>
-                    <article class="project-card">
-                        <a href="https://maxbo.me/html-in-hyde/1/projects/puzzling/index.html">
-                            <img src="images/puzzling.png" alt="Puzzling">
+                            <img src="images/puzzling.png" alt="puzzling">
                             <h2>Puzzling</h2>
                             <p>A jigsaw puzzle I built at HTML in Hyde #1.</p>
                         </a>
