Switch images to webp

--- a/public/projects.html
+++ b/public/projects.html
@@ -30,14 +30,14 @@
                 <section class="project-grid">
                     <article class="project-card">
                         <a href="https://github.com/thomashorsey/website">
-                            <img src="images/website.png" alt="website">
+                            <img src="images/website.webp" alt="website">
                             <h2>Website</h2>
                             <p>A personal index of my work and interests.</p>
                         </a>
                     </article>
                     <article class="project-card">
                         <a href="https://maxbo.me/html-in-hyde/1/projects/puzzling/index.html">
-                            <img src="images/puzzling.png" alt="puzzling">
+                            <img src="images/puzzling.webp" alt="puzzling">
                             <h2>Puzzling</h2>
                             <p>A jigsaw puzzle I built at HTML in Hyde #1.</p>
                         </a>
