Add description and canonical for SEO score

--- a/public/contact.html
+++ b/public/contact.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tom Horsey</title>
+        <meta name="description" content="Contact">
+        <link rel="canonical" href="https://tomhorsey.com/contact">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico" sizes="32x32">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
