Add Google Fonts locally

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
         <title>Tom Horsey</title>
         <meta name="description" content="Home"> 
         <link rel="canonical" href="https://tomhorsey.com/">
+        <link rel="preload" href="fonts/source-code-pro-v31-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="fonts/source-code-pro-v31-latin-700.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="fonts/tiny5-v3-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="icon" type="image/x-icon" href="images/favicon.ico" sizes="32x32">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&family=Tiny5&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js" defer></script>
+        <link rel="stylesheet" href="css/style.css">
+        <script src="js/script.js" defer></script>
     </head>
     <body>
         <header>
