--- a/public/work.html
+++ b/public/work.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tom Horsey</title>
-        <meta name="description" content="Home"> 
-        <link rel="canonical" href="https://tomhorsey.com/">
+        <meta name="description" content="Work"> 
+        <link rel="canonical" href="https://tomhorsey.com/work">
         <link rel="preload" href="fonts/source-code-pro-v31-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="fonts/source-code-pro-v31-latin-700.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="icon" type="image/x-icon" href="images/favicon.ico" sizes="32x32">
