--- a/public/work.html
+++ b/public/work.html
@@ -11,6 +11,9 @@
         <link rel="icon" type="image/x-icon" href="images/favicon.ico" sizes="32x32">
         <link rel="stylesheet" href="css/style.css">
         <script src="js/script.js" defer></script>
+        <link rel="prefetch" href="index.html">
+        <link rel="prefetch" href="projects.html">
+        <link rel="prefetch" href="contact.html">
     </head>
     <body>
         <header>
