Update website description

--- a/public/projects.html
+++ b/public/projects.html
@@ -36,7 +36,7 @@
                         <a href="https://github.com/thomashorsey/website">
                             <img src="images/website.webp" alt="website">
                             <h2>Website</h2>
-                            <p>A personal index of my work and interests.</p>
+                            <p>A simple log of my interests and experiments.</p>
                         </a>
                     </article>
                     <article class="project-card">
