--- a/public/contact.html
+++ b/public/contact.html
@@ -11,19 +11,19 @@
         <link rel="icon" type="image/x-icon" href="images/favicon.ico" sizes="32x32">
         <link rel="stylesheet" href="css/style.css">
         <script src="js/script.js" defer></script>
-        <link rel="prefetch" href="index.html">
-        <link rel="prefetch" href="work.html">
-        <link rel="prefetch" href="projects.html">
+        <link rel="prefetch" href="/">
+        <link rel="prefetch" href="work">
+        <link rel="prefetch" href="projects">
     </head>
     <body>
         <header>
             <div class="container">
                 <nav>
-                    <a href="index.html" class="logo"> Tom Horsey</a>
+                    <a href="/"> Tom Horsey</a>
                     <ul>
-                        <li><a href="work.html">Work</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="work">Work</a></li>
+                        <li><a href="projects">Projects</a></li>
+                        <li><a href="contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
