--- a/public/contact.html
+++ b/public/contact.html
@@ -11,9 +11,6 @@
         <link rel="icon" type="image/x-icon" href="images/favicon.ico" sizes="32x32">
         <link rel="stylesheet" href="css/style.css">
         <script src="js/script.js" defer></script>
-        <link rel="prefetch" href="/">
-        <link rel="prefetch" href="work">
-        <link rel="prefetch" href="projects">
     </head>
     <body>
         <header>
@@ -46,5 +43,13 @@
                 <p>© <span id="current-year"></span></p>
             </div>
         </footer>
+        <script type="speculationrules">
+            {
+                "prefetch": [{
+                    "source": "list",
+                    "urls": ["/", "/work", "/projects", "/contact"]
+                }]
+            }
+        </script>
     </body>
 </html>
