--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
                 <nav>
                     <a href="/"> Tom Horsey</a>
                     <ul>
-                        <li><a href="work">Work</a></li>
-                        <li><a href="projects">Projects</a></li>
-                        <li><a href="contact">Contact</a></li>
+                        <li><a href="/work">Work</a></li>
+                        <li><a href="/projects">Projects</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
