--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
             <div class="container">
                 <nav>
                     <a href="/"> Tom Horsey</a>
+                    <a href="#" class="drop-down-button">=</a>
                     <ul>
                         <li><a href="/work">Work</a></li>
                         <li><a href="/projects">Projects</a></li>
