--- a/public/projects.html
+++ b/public/projects.html
@@ -17,6 +17,7 @@
             <div class="container">
                 <nav>
                     <a href="/"> Tom Horsey</a>
+                    <a href="#" class="drop-down-button">=</a>
                     <ul>
                         <li><a href="/work">Work</a></li>
                         <li><a href="/projects">Projects</a></li>
